# rdt_arithmetic

./: CMakeLists.txt  brackets.cpp  brackets.h  common.cpp  common.h  forced_rdts.cpp  forced_rdts.h  giac_console.cpp  giac_console.h  giac_helper.cpp  giac_helper.h  giac_setup.h  hterms.cpp  hterms.h  main.cpp  pretty_stream.cpp  pretty_stream.h
examples/: costum_brackets.xws  coupling_lines.xws  felix_rdts.xws
